# bert-char-he

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  TRAINING.md
scripts/: prepare_dataset.sh  split_dataset.sh  train.sh  train_scratch.sh  upload_checkpoint.sh
src/: checkpoint.py  config.py  data.py  decode.py  encoder.py  eval.py  infer.py  model.py  optimizer.py  train.py
src/neobert/: README.md  model.py
