[project]
name = "neobert-he-mlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.9.0",
    "setuptools<81",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.5.0",
    "xformers>=0.0.35",
]
